teams view working showing team_score as well

--- a/views/teams.erb
+++ b/views/teams.erb
@@ -5,6 +5,6 @@
     <p> Name: <a href="/teams/<%= team.id %>"> <%= team.team_name %> </a> </p>
     <p> Owner: <%=team.owner%> </p>
 
-    <p> Score: <%= @score %> </p>
+    <p> Score: <%= team.score %> </p>
   <p>--------------------</p>
   <% end %>
