adding RESTful routes for teams

--- a/views/admin_home.erb
+++ b/views/admin_home.erb
@@ -1,1 +1,5 @@
 <h1>This is the admin page</h1>
+
+<a href="/admin-teams">View all Teams</a>
+<a href="/admin-teams/new">Add a Team</a>
+<a href="/admin-characters">View all Characters</a>
