teams RESTful routes in and working

--- a/views/admin-teams/edit.erb
+++ b/views/admin-teams/edit.erb
@@ -5,7 +5,7 @@
   <input type="text" id="team-name" name="team_name" value="<%= @team_show.team_name %>">
 
   <label for="team-owner">Team Owner:</label>
-  <input type="text" id="team-owner" name="Owner" value="<%= @team_show.owner %>">
+  <input type="text" id="team-owner" name="owner" value="<%= @team_show.owner %>">
 
 
 <input type="submit" value="Update Team">
