--- a/views/admin_home.erb
+++ b/views/admin_home.erb
@@ -3,3 +3,4 @@
 <a href="/admin-teams">View all Teams</a>
 <a href="/admin-teams/new">Add a Team</a>
 <a href="/admin-characters">View all Characters</a>
+<a href="/admin-characters/new">Add a new Character</a>
