--- a/views/admin-characters/index.erb
+++ b/views/admin-characters/index.erb
@@ -1,11 +1,9 @@
-<h1>Chracter List</h1>
+<h1>Character List</h1>
 
 
-  <% @teams.each do |team| %>
-  <p>insert character pic here</p>
+  <% @characters.each do |character| %>
+    <img src="<%= character.pic_url %>" alt="">
     <p> Name: <a href="/characters/<%= character.id %>"> <%= character.name %> </a> </p>
-    <p> About: <%=character.bio%> </p>
-
     <p> Score: <%= character.score %> </p>
   <p>--------------------</p>
   <% end %>
