--- a/views/admin-teams/new.erb
+++ b/views/admin-teams/new.erb
@@ -1,10 +1,10 @@
 <h1>Add New Team</h1>
 
 <form action="/admin-teams" method="post">
- <label for="team-name">Team name:</label>
+ <label for="team-name">Team Name:</label>
  <input type="text" id="team-name" name="team_name" placeholder="Team name" value="">
 
- <label for="team-owner">Team name:</label>
+ <label for="team-owner">Owner's Name:</label>
  <input type="text" id="team-owner" name="owner" placeholder="Owner's name" value="">
 
 
