functional MVP achieved - updating how data is presented before making it look nice

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,9 @@
 <body>
  <nav>
    <ul>
-     <li><a href="/">League</a> </li>
+     <li><a href="/teams">League</a> </li>
+     <li><a href="/characters">Characters</a> </li>
+
    </ul>
  </nav>
  <%= yield %>
