--- a/views/user/show_team.erb
+++ b/views/user/show_team.erb
@@ -12,15 +12,18 @@
 
 <table>
   <tr>
+    <th>Rank</th>
     <th>Name</th>
     <th>Score</th>
   </tr>
-
+<%counter = 1 %>
   <%for character in @team_show.characters%>
     <tr>
+      <td><%= counter%></td>
       <td><%=character.name%></td>
       <td><%=character.score%></td>
     </tr>
+  <%counter = counter+1%>
   <%end%>
 
 </table>
@@ -28,11 +31,12 @@
 
 
 
-<form action="/admin-teams/<%= @team_show.id %>/edit" method="get">
+<form action="/teams/<%= @team_show.id %>/edit" method="get">
   <!-- <input type="hidden" name="_method" value=""> -->
-  <input type="submit" value="Edit Team">
+  <input type="submit" value="Edit Team Name">
 </form>
-<form action="/admin-teams/<%= @team_show.id %>" method="post">
-  <input type="hidden" name="_method" value="delete">
-  <input type="submit" value="Delete Team">
+
+<form action="/teams" method="get">
+  <!-- <input type="hidden" name="_method" value=""> -->
+  <input type="submit" value="Go Back to Teams">
 </form>
