--- a/views/user/teams.erb
+++ b/views/user/teams.erb
@@ -1,12 +1,12 @@
-<h1>This is the homepage - under construction</h1>
+<h1>Team standings</h1>
 
-<h3>Team standings</h3>
 
 
   <table>
     <tr>
       <th>Rank</th>
       <th>Name</th>
+      <th>Owner</th>
       <th>Score</th>
     </tr>
   <%counter = 1 %>
@@ -14,6 +14,7 @@
       <tr>
         <td><%= counter%></td>
         <td><a href="/teams/<%= team.id %>"> <%=team.team_name%></td>
+        <td><%=team.owner%></td>
         <td><%=team.score%></td>
       </tr>
     <%counter = counter+1%>
