--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,7 @@
    <ul>
      <li><a href="/teams">League</a> </li>
      <li><a href="/characters">Characters</a> </li>
+     <li><a href="/scoring">Scoring</a> </li>
 
    </ul>
  </nav>
