added image and font assets, started styling

--- a/views/admin_home.erb
+++ b/views/admin_home.erb
@@ -1,5 +1,7 @@
 <h1>This is the admin page</h1>
 
+<p>As Hand of the King you have been appointed and authorised to make decisions on behalf of the Kingdom. As such you have the power and responsiblity to view/add/edit all teams and characters. </p>
+
 <a href="/admin-teams">View all Teams</a>
 <a href="/admin-teams/new">Add a Team</a>
 <a href="/admin-characters">View all Characters</a>
