--- a/views/user/scoring.erb
+++ b/views/user/scoring.erb
@@ -1,6 +1,9 @@
 <h1>Scoring </h1>
 
+
+
 <p>Below you will find the scoring used for your character's actions. Your character will gain points for:</p>
+<div class="scoring">
 <h3>Violence:</h3>
 <p><strong>+10pts</strong> Kill random (caps at 50pts)</p>
 <p><strong>+15pts</strong> Kill White Walker</p>
@@ -19,3 +22,5 @@
 <p><strong>+50pts</strong> Acquires Valyrian Steel </p>
 <p><strong>+50pts</strong> Returns from the Dead </p>
 <p><strong>+200pts</strong> Claims the Iron Throne</p>
+
+</div>
