--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,14 @@
-<h1>Welcome to a Game of Game of Thones</h1>
-<h4>"You win or you die"</h4>
-<h3> <a href="/teams"> Team standings</a></h3>
+<div class="home-wall"><span>
+
+  <div class="home-heading">
+
+
+    <h1>Welcome to a Game of Game of Thones</h1>
+    <h4>"When you play the Game of Thrones: You win or you die"</h4>
+  </div>
+  <div class="home-content">
+
+    <h3> <a href="/teams"> Team standings</a></h3>
 
 
   <table class="standings">
@@ -20,3 +28,5 @@
     <%end%>
 
   </table>
+  </div>
+</span></div>
