--- a/views/user/scoring.erb
+++ b/views/user/scoring.erb
@@ -18,7 +18,7 @@
 <p><strong>+15pts</strong> Uses Magic (includes visions)</p>
 
 
-<h3>Status/Power</h3>
+<h3>Status/Power:</h3>
 <p><strong>+50pts</strong> Acquires Valyrian Steel </p>
 <p><strong>+50pts</strong> Returns from the Dead </p>
 <p><strong>+200pts</strong> Claims the Iron Throne</p>
