--- a/public/styles/admin_structure.css
+++ b/public/styles/admin_structure.css
@@ -1,6 +1,8 @@
 body{
   font-family: GameOfThrones, fantasy, sans-serif;
   color: white;
+  letter-spacing: 0.01em;
+  word-spacing: 0.1em;
   background-image: url('/images/hand.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -45,3 +47,6 @@ p {
   padding: -2rem;
   border: -2rem;
 }
+
+
+/* CHARACTERS PAGE */
