--- a/public/styles/structure.css
+++ b/public/styles/structure.css
@@ -35,6 +35,7 @@ p {
   margin-bottom: 10px;
 }
 
+/* HOME PAGE */
 .home-wall {
   display: flex;
   justify-content: center;
@@ -65,7 +66,7 @@ p {
 
 }
 
-/* scoring text */
+/* SCORING PAGE */
 
 .scoring {
   display: grid;
@@ -74,3 +75,49 @@ p {
   padding: -2rem;
   border: -2rem;
 }
+
+/* CHARACTERS PAGE */
+.character-gallery {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+
+}
+
+.character-pic {
+  width: 40%;
+  height: 100%;
+  border-radius: 5px 5px 0 0;
+}
+
+.character-card {
+  width: 18rem;
+  margin-bottom: 5px;
+  display: flex;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.9);
+  transition: 0.3s;
+  border-radius: 5px;
+
+}
+
+.character-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,5);
+}
+
+.character-details {
+  padding: 2px 16px;
+  display: flex;
+  flex-flow: row wrap;
+
+}
+
+/* .character-details > div {
+  padding: 5px;
+  margin: 5px;
+  line-height: 1.5rem;
+  margin-top: -30px;
+} */
+
+/* .character-details p {
+  text-align: center;
+} */
