character screens tidied up

--- a/views/admin-characters/show.erb
+++ b/views/admin-characters/show.erb
@@ -1,10 +1,16 @@
 <h1><%= @character_show.name %></h1>
 
+<section class="character-about">
+  <div class="character-display">
 
-  <img src="<%= @character_show.pic_url %>" alt="">
+  <img class="character-profile" src="<%= @character_show.pic_url %>" onerror="this.src='/images/2rqqg5.jpg';"/>
+  <div class="character-bio">
+
   <p> Bio: <%= @character_show.bio %> </p>
   <p> Score: <%= @character_show.score %> </p>
 
+
+<div class="character-button">
 
 <form action="/admin-characters/<%= @character_show.id %>/edit" method="get">
   <!-- <input type="hidden" name="_method" value=""> -->
@@ -14,3 +20,8 @@
   <input type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Character">
 </form>
+
+</div>
+</div>
+</div>
+</div>
