--- a/views/user/show_character.erb
+++ b/views/user/show_character.erb
@@ -1,11 +1,25 @@
 <h1><%= @character_show.name %></h1>
 
+<section class="character-about">
+  <div class="character-display">
 
-  <img src="<%= @character_show.pic_url %>" alt="">
-  <p> Bio: <%= @character_show.bio %> </p>
-  <p> Score: <%= @character_show.score %> </p>
 
-  <form action="/characters" method="get">
+  <img class="character-profile" src="<%= @character_show.pic_url %>" onerror="this.src='/images/2rqqg5.jpg';"/>
+    <div class="character-bio">
+
+
+    <p> Bio: </p>
+    <p> <%= @character_show.bio %> </p>
+    <p> Score: <%= @character_show.score %> </p>
+
+    <div class="character-button">
+
+    <form action="/characters" method="get">
     <!-- <input type="hidden" name="_method" value=""> -->
-    <input type="submit" value="Go Back to Characters">
-  </form>
+      <input type="submit" value="Go Back to Characters">
+    </form>
+    </div>
+</div>
+
+</div>
+</div>
