--- a/public/styles/admin_structure.css
+++ b/public/styles/admin_structure.css
@@ -38,15 +38,81 @@ p {
   line-height: 2.5rem;
 }
 
-/* scoring text */
-
-.scoring {
-  display: grid;
-  justify-content: center;
-  background: rgba(0,0,0,0.65);
-  padding: -2rem;
-  border: -2rem;
-}
 
 
 /* CHARACTERS PAGE */
+.character-gallery {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+
+}
+
+.character-pic {
+  width: 40%;
+  height: 100%;
+  border-radius: 5px 5px 0 0;
+}
+
+.character-card {
+  width: 18rem;
+  margin-bottom: 5px;
+  display: flex;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.9);
+  transition: 0.3s;
+  border-radius: 5px;
+
+}
+
+.character-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,5);
+}
+
+.character-details {
+  padding: 2px 16px;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+/* CHARACTER BIOS */
+.character-about {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.character-display {
+  width: 50rem;
+  margin-bottom: 10px;
+  display: flex;
+  /* box-shadow: 0 2px 4px 0 rgba(0,0,0,0.9); */
+  background: rgba(0,0,0,0.5);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.character-profile {
+  width: 40%;
+  height: 100%;
+  border-radius: 5px 5px 0 0;
+}
+
+.character-button {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+.character-bio {
+  padding: 2px 16px 2px 16px;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.character-bio p {
+  font-family: GameOfThrones, fantasy, sans-serif;
+  font-size: 1.1em;
+  color: white;
+  letter-spacing: 0.01em;
+  word-spacing: 0.1em;
+}
