--- a/public/styles/structure.css
+++ b/public/styles/structure.css
@@ -108,16 +108,47 @@ p {
   padding: 2px 16px;
   display: flex;
   flex-flow: row wrap;
+}
+/* CHARACTER BIOS */
+.character-about {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
 
 }
 
-/* .character-details > div {
-  padding: 5px;
-  margin: 5px;
-  line-height: 1.5rem;
-  margin-top: -30px;
-} */
+.character-display {
+  width: 50rem;
+  margin-bottom: 10px;
+  display: flex;
+  /* box-shadow: 0 2px 4px 0 rgba(0,0,0,0.9); */
+  background: rgba(0,0,0,0.5);
+  transition: 0.3s;
+  border-radius: 5px;
+}
 
-/* .character-details p {
-  text-align: center;
-} */
+.character-profile {
+  width: 40%;
+  height: 100%;
+  border-radius: 5px 5px 0 0;
+}
+
+.character-button {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+.character-bio {
+  padding: 2px 16px 2px 16px;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.character-bio p {
+  font-family: GameOfThrones, fantasy, sans-serif;
+  font-size: 1.1em;
+  color: white;
+  letter-spacing: 0.01em;
+  word-spacing: 0.1em;
+}
