--- a/views/admin-characters/index.erb
+++ b/views/admin-characters/index.erb
@@ -1,9 +1,15 @@
 <h1>Character List</h1>
 
+<section class="character-gallery">
 
   <% @characters.each do |character| %>
-    <img src="<%= character.pic_url %>" alt="">
+  <div class="character-card">
+    <img class="character-pic" src="<%= character.pic_url %>" onerror="this.src='/images/2rqqg5.jpg';"/>
     <p> Name: <a href="/admin-characters/<%= character.id %>"> <%= character.name %> </a> </p>
     <p> Score: <%= character.score %> </p>
-  <p>--------------------</p>
+    </div>
+    </div>
+  </div>
   <% end %>
+
+</div>
