--- a/views/user/characters.erb
+++ b/views/user/characters.erb
@@ -2,12 +2,9 @@
 
 <section class="character-gallery">
 
-
-
-
   <% @characters.each do |character| %>
   <div class="character-card">
-    <img class="character-pic" src="<%= character.pic_url %>" alt="">
+    <img class="character-pic" src="<%= character.pic_url %>" onerror="this.src='/images/2rqqg5.jpg';"/>
     <div class="character-details">
 
       <p> Name: <a href="/characters/<%= character.id %>"> <%= character.name %> </a> </p>
@@ -16,8 +13,6 @@
     </div>
   </div>
   <% end %>
-
-
 
 
 </div>
