--- a/public/styles/admin_structure.css
+++ b/public/styles/admin_structure.css
@@ -116,3 +116,32 @@ p {
   letter-spacing: 0.01em;
   word-spacing: 0.1em;
 }
+
+/* TEAM VIEW  */
+
+.pic-small {
+  width: 2em;
+  height: 3em;
+}
+
+.team-about {
+  display: grid;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.team-display {
+  width: 50rem;
+  margin-bottom: 10px;
+  display: grid;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.9);
+  /* background: rgba(0,0,0,0.5); */
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.team-members {
+  padding: 2px 16px 2px 16px;
+  display: grid;
+  flex-flow: row wrap;
+}
