--- a/public/styles/structure.css
+++ b/public/styles/structure.css
@@ -71,9 +71,15 @@ p {
 .scoring {
   display: grid;
   justify-content: center;
-  background: rgba(0,0,0,0.5);
+
   padding: -2rem;
   border: -2rem;
+}
+
+.scoring span {
+  background: rgba(0,0,0,0.5);
+  padding: 1rem;
+  margin: 1rem;
 }
 
 /* CHARACTERS PAGE */
@@ -151,4 +157,32 @@ p {
   color: white;
   letter-spacing: 0.01em;
   word-spacing: 0.1em;
+}
+/* TEAM VIEW  */
+
+.pic-small {
+  width: 2em;
+  height: 3em;
+}
+
+.team-about {
+  display: grid;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.team-display {
+  width: 50rem;
+  margin-bottom: 10px;
+  display: grid;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.9);
+  /* background: rgba(0,0,0,0.5); */
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.team-members {
+  padding: 2px 16px 2px 16px;
+  display: grid;
+  flex-flow: row wrap;
 }
