basic mvp styling done - issue with admin homepage

--- a/public/styles/admin_structure.css
+++ b/public/styles/admin_structure.css
@@ -38,7 +38,38 @@ p {
   line-height: 2.5rem;
 }
 
+/* HOME SCREEN */
+.icon-gallery {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
 
+.icon-pic {
+  width: 50%;
+  height: 90%;
+  border-radius: 5px 5px 0 0;
+}
+
+.icon-card {
+  width: 24rem;
+  margin-bottom: 5px;
+  display: flex;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.9);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.icon-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,5);
+}
+
+.icon-details {
+  padding: 2px 16px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+}
 
 /* CHARACTERS PAGE */
 .character-gallery {
