--- a/views/admin_home.erb
+++ b/views/admin_home.erb
@@ -2,7 +2,41 @@
 
 <p>As Hand of the King you have been appointed and authorised to make decisions on behalf of the Kingdom. As such you have the power and responsiblity to view/add/edit all teams and characters. </p>
 
-<a href="/admin-teams">View all Teams</a>
-<a href="/admin-teams/new">Add a Team</a>
-<a href="/admin-characters">View all Characters</a>
-<a href="/admin-characters/new">Add a new Character</a>
+<section class=icon-gallery>
+
+  <div class="icon-card">
+    <a class="icon-pic" href="/admin-teams"> <img src="/images/wolf.jpg" alt="View all Teams"></a>
+    <div class="icon-details">
+      <p> View all Teams </p>
+    </div>
+  </div>
+</div>
+
+<div class="icon-card">
+  <a class="icon-pic" href="/admin-teams/new"><img src="/images/stag.jpg" alt="Add a Team"></a>
+
+  <div class="icon-details">
+    <p>Add a Team</p>
+  </div>
+</div>
+</div>
+
+<div class="icon-card">
+  <a class="icon-pic" href="/admin-characters"><img src="/images/dragon.png" alt="View all Characters"></a>
+
+  <div class="icon-details">
+    <p>View all Characters</p>
+  </div>
+</div>
+</div>
+
+<div class="icon-card">
+  <a class="icon-pic" href="/admin-characters/new"><img src="/images/lion.jpg" alt="Add a new Character"></a>
+
+  <div class="icon-details">
+    <p>Add a new Character</p>
+  </div>
+</div>
+</div>
+
+</div>
