--- a/views/home.erb
+++ b/views/home.erb
@@ -29,4 +29,14 @@
 
   </table>
   </div>
+
+<!-- <div class="home-content">
+  <h3>Top free agents</h3>
+  <img src="/images/crown.jpg" alt="">
+</div>
+
+<div class="home-content">
+  <h3>Top scorers</h3>
+  <img src="/images/crown.jpg" alt="">
+</div> -->
 </span></div>
