--- a/views/admin_home.erb
+++ b/views/admin_home.erb
@@ -5,7 +5,7 @@
 <section class=icon-gallery>
 
   <div class="icon-card">
-    <a class="icon-pic" href="/admin-teams"> <img src="/images/wolf.jpg" alt="View all Teams"></a>
+    <a  href="/admin-teams"> <img class="icon-pic" src="/images/wolf.jpg" alt="View all Teams"></a>
     <div class="icon-details">
       <p> View all Teams </p>
     </div>
@@ -13,7 +13,7 @@
 </div>
 
 <div class="icon-card">
-  <a class="icon-pic" href="/admin-teams/new"><img src="/images/stag.jpg" alt="Add a Team"></a>
+  <a href="/admin-teams/new"><img class="icon-pic" src="/images/stag.jpg" alt="Add a Team"></a>
 
   <div class="icon-details">
     <p>Add a Team</p>
@@ -22,7 +22,7 @@
 </div>
 
 <div class="icon-card">
-  <a class="icon-pic" href="/admin-characters"><img src="/images/dragon.png" alt="View all Characters"></a>
+  <a  href="/admin-characters"><img class="icon-pic" src="/images/dragon.png" alt="View all Characters"></a>
 
   <div class="icon-details">
     <p>View all Characters</p>
@@ -31,7 +31,7 @@
 </div>
 
 <div class="icon-card">
-  <a class="icon-pic" href="/admin-characters/new"><img src="/images/lion.jpg" alt="Add a new Character"></a>
+  <a href="/admin-characters/new"><img class="icon-pic" src="/images/lion.jpg" alt="Add a new Character"></a>
 
   <div class="icon-details">
     <p>Add a new Character</p>
