--- a/views/admin-characters/index.erb
+++ b/views/admin-characters/index.erb
@@ -5,6 +5,8 @@
   <% @characters.each do |character| %>
   <div class="character-card">
     <img class="character-pic" src="<%= character.pic_url %>" onerror="this.src='/images/2rqqg5.jpg';"/>
+    <div class="character-details">
+      
     <p> Name: <a href="/admin-characters/<%= character.id %>"> <%= character.name %> </a> </p>
     <p> Score: <%= character.score %> </p>
     </div>
