--- a/views/user/drop.erb
+++ b/views/user/drop.erb
@@ -22,7 +22,7 @@
   <input type="hidden" name="_method" value="put">
 </form>
 
-<form action="/teams/<%=@character_show.id%>" method="get">
+<form action="/teams/<%=@character_show.team_id%>" method="get">
   <!-- <input type="hidden" name="_method" value=""> -->
   <input type="submit" value="No">
 </form>
