tidied home page icons - still issues with space within

--- a/views/admin_home.erb
+++ b/views/admin_home.erb
@@ -13,19 +13,22 @@
 </div>
 
 <div class="icon-card">
-  <a href="/admin-teams/new"><img class="icon-pic" src="/images/stag.jpg" alt="Add a Team"></a>
-
-  <div class="icon-details">
-    <p>Add a Team</p>
-  </div>
-</div>
-</div>
-
-<div class="icon-card">
   <a  href="/admin-characters"><img class="icon-pic" src="/images/dragon.png" alt="View all Characters"></a>
 
   <div class="icon-details">
     <p>View all Characters</p>
+  </div>
+</div>
+</div>
+</div>
+
+<section class=icon-gallery>
+<div class="icon-card">
+
+    <a href="/admin-teams/new"><img class="icon-pic" src="/images/stag.jpg" alt="Add a Team"></a>
+
+    <div class="icon-details">
+      <p>Add a Team</p>
   </div>
 </div>
 </div>
