--- a/public/styles/admin_structure.css
+++ b/public/styles/admin_structure.css
@@ -46,18 +46,23 @@ p {
 }
 
 .icon-pic {
-  width: 50%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   border-radius: 5px 5px 0 0;
 }
 
 .icon-card {
-  width: 24rem;
+  width: 18rem;
   margin-bottom: 5px;
   display: flex;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.9);
   transition: 0.3s;
   border-radius: 5px;
+}
+
+.icon a {
+  width: 18rem
+
 }
 
 .icon-card:hover {
