add player working

--- a/views/user/characters.erb
+++ b/views/user/characters.erb
@@ -1,5 +1,11 @@
 <h1>Character List</h1>
 
+<form action="/free_agents" method="get">
+  <!-- <input type="hidden" name="_method" value=""> -->
+  <input type="submit" value="Free Agents">
+</form>
+
+
 <section class="character-gallery">
 
   <% @characters.each do |character| %>
