--- a/views/admin-characters/edit.erb
+++ b/views/admin-characters/edit.erb
@@ -15,7 +15,7 @@
 
   <label for="team-select">Team:</label>
     <select id= "team-select" name="team_id">
-      <option value=<%= nil %> Free Agent</option>
+      <option value=<%= nil %>> Free Agent</option>
     <% @teams.each do |team| %>
       <% if team.id == @character_show.team_id %>
       <option value=<%= team.id %> selected><%= team.team_name %></option>
