--- a/views/admin_home.erb
+++ b/views/admin_home.erb
@@ -4,42 +4,41 @@
 
 <section class=icon-gallery>
 
-  <div class="icon-card">
-    <a  href="/admin-teams"> <img class="icon-pic" src="/images/wolf.jpg" alt="View all Teams"></a>
-    <div class="icon-details">
-      <p> View all Teams </p>
+  <a class="icon-anchor" href="/admin-teams">
+    <div class="icon-card">
+      <img class="icon-pic" src="/images/wolf.jpg" alt="View all Teams">
+      <div class="icon-details">
+        <p> View all Teams </p>
+      </div>
     </div>
-  </div>
-</div>
+  </a>
 
-<div class="icon-card">
-  <a  href="/admin-characters"><img class="icon-pic" src="/images/dragon.png" alt="View all Characters"></a>
-
-  <div class="icon-details">
-    <p>View all Characters</p>
-  </div>
-</div>
-</div>
-</div>
+  <a class="icon-anchor" href="/admin-characters">
+    <div class="icon-card">
+      <img class="icon-pic" src="/images/dragon.png" alt="View all Characters">
+      <div class="icon-details">
+        <p>View all Characters</p>
+      </div>
+    </div>
+  </a>
+</section>
 
 <section class=icon-gallery>
-<div class="icon-card">
+  <a class="icon-anchor" href="/admin-teams/new">
+    <div class="icon-card">
+      <img class="icon-pic" src="/images/stag.jpg" alt="Add a Team">
+      <div class="icon-details">
+        <p>Add a Team</p>
+      </div>
+    </div>
+  </a>
 
-    <a href="/admin-teams/new"><img class="icon-pic" src="/images/stag.jpg" alt="Add a Team"></a>
-
-    <div class="icon-details">
-      <p>Add a Team</p>
-  </div>
-</div>
-</div>
-
-<div class="icon-card">
-  <a href="/admin-characters/new"><img class="icon-pic" src="/images/lion.jpg" alt="Add a new Character"></a>
-
-  <div class="icon-details">
-    <p>Add a new Character</p>
-  </div>
-</div>
-</div>
-
-</div>
+  <a class="icon-anchor" href="/admin-characters/new">
+    <div class="icon-card">
+      <img class="icon-pic" src="/images/lion.jpg" alt="Add a new Character">
+      <div class="icon-details">
+        <p>Add a new Character</p>
+      </div>
+    </div>
+  </a>
+</section>
