final tweaks to free_agents view

--- a/views/user/free_agents.erb
+++ b/views/user/free_agents.erb
@@ -1,5 +1,5 @@
 <h1>Free Agents</h1>
-<p>Under construction; will show a list of characters not in a team</p>
+<p>All available Characters</p>
 
 
 <section class="character-gallery">
