fixed typo on home page

--- a/views/home.erb
+++ b/views/home.erb
@@ -3,7 +3,7 @@
   <div class="home-heading">
 
 
-    <h1>Welcome to a Game of Game of Thones</h1>
+    <h1>Welcome to a Game of Game of Thrones</h1>
     <h4>"When you play the Game of Thrones: You win or you die"</h4>
   </div>
   <div class="home-content">
