undo font change

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
 
   <style>
   @font-face {
-    /* font-family: GameOfThrones; */
+    font-family: GameOfThrones;
     src: url(images/GameofThrones.ttf);
   }
   a{  color: white;}
